# bevy_game

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
src/camera/: mod.rs  systems.rs
src/common/: components.rs  mod.rs
src/player/: components.rs  mod.rs  setup.rs  systems.rs
